# pip-sweep

./: LICENSE  README.md  README_ZH.md  pyproject.toml
.github/workflows/: publish.yml
docs/superpowers/specs/: 2026-06-20-pip-sweep-design.md
src/pip_sweep/: cli.py  core.py
tests/: test_core.py
